syntax = "proto3";

package grpc;

option go_package = "github.com/burakmert236/goodswipe-common/generated/grpc";

// Common Types
message MessageResponse {
    bool is_success = 1;
    string message = 2;
}